# result-sender

./: README.md  pyproject.toml
result_sender/: __init__.py  interface.py
result_sender/all_senders/: prusen.py  result_sender.py  tp_sender.py
result_sender/libs/: data_save.py  etc_tools.py  log_controller.py  signal_sender.py
result_sender/libs/sync/: __init__.py  sync_sender.py
result_sender/utils/: decoder.py
